# hptzip

./: .travis.yml  CMakeLists.txt  ChangeLog  INSTALL.md  Makefile  README.md  VERSION  appveyor.yml  cvsdate.h  hpt_patch_desc.txt  hpt_zipInternalsupp.txt  hptzip.cpp  hptzip.h  makefile.mvcdll  readme.txt
debian/: changelog  control  copyright  libhptzip-dev.install  libhptzip-dev.links  libhptzip.install  rules
hptzip/: crypt.h  hptzip.h  hptzipdl.h  ioapi.h  iowin32.h  unzip.h  version.h  zconf.h  zip.h  zlib.h
make/: hptzip.100.vcxproj  hptzip.100.vcxproj.filters  hptzipDll.70.vcproj  hptzipDll.71.vcproj  hptzipDll.8.vcproj  hptzipDll.80.vcproj  hptzipDll.vcproj  huskymak.cfg  makefile  makefile.inc  makefile.mvc  makefile.mvcdll  makefile.prg  osdep.inc
make/osdefs/: be  bsd  cyg  djg  emx  generic  lnx  qnx
src/: hptzip.c  ioapi.c  iowin32.c  test.c  unzip.c  version.c  zip.c
zlib-win32/: zdll.exp
zlib-win64/: zlib.dll.old  zlib.exp  zlib.lib.old  zlibstatic.lib
